chore: dep version bumps
fix(test): labelblocklookup serialization test